--- a/src/main/resources/templates/userManagement.html
+++ b/src/main/resources/templates/userManagement.html
@@ -2,9 +2,10 @@
 <html xmlns="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Home</title>
+  <title>User Managements</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script th:src="@{/js/cart.js}"></script>  
   <style>
     .login-button {
       position: absolute;
@@ -89,13 +90,13 @@
                         <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button"
                             data-bs-toggle="dropdown">Products</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" th:href="@{/products/supplements}">Supplement</a></li>
-                            <li><a class="dropdown-item" th:href="@{/products/gears}">Gears</a></li>
+                            <li><a class="dropdown-item" th:href="@{/ComplexGym/products/supplements}">Supplement</a></li>
+                            <li><a class="dropdown-item" th:href="@{/ComplexGym/products/gears}">Gears</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/cart}">
-                            <i class="fas fa-shopping-cart"></i> Cart <span id="cart-count">(0)</span>
+                        <a class="nav-link" th:href="@{/ComplexGym/cart}">
+                            <i class="fas fa-shopping-cart"></i> Cart <span id="cart-count"></span>
                         </a>
                     </li>
                 </ul>
@@ -113,7 +114,7 @@
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li th:if="${role == 'ROLE_ADMIN'}"><a class="dropdown-item" th:href="@{/userManagement}">User Management</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li th:if="${role == 'ROLE_ADMIN'}"><a class="dropdown-item" th:href="@{/products/productManagement}">Product Management</a></li>
+                                <li th:if="${role == 'ROLE_ADMIN'}"><a class="dropdown-item" th:href="@{/ComplexGym/products/productManagement}">Product Management</a></li>
                                 <li><hr class="dropdown-divider"></li>                                
                                 <li><a class="dropdown-item logout-item" th:href="@{/logout}">Logout</a></li>
                             </ul>
