--- a/src/main/resources/templates/supplements.html
+++ b/src/main/resources/templates/supplements.html
@@ -87,7 +87,7 @@
 	                    <a th:href="@{/ComplexGym/products/detailProduct(id=${product.id})}" class="text-decoration-none">
 	                        <h5 class="card-title" th:text="${product.productName}" style="color: black;"></h5>
 	                    </a>
-	                    <p class="card-text">💰 Giá: <span th:text="${product.price}"></span> VND</p>
+	                    <p class="card-text">💰 Giá: <span th:text="${#numbers.formatInteger(product.price, 3, 'POINT')}"></span> VND</p>
 	                </div>
 	            </div>
 	        </div>
